--- a/particles/index2.html
+++ b/particles/index2.html
@@ -35,6 +35,7 @@
   <p>Mouse location controls one of the attractors. While mouse button is pressed, that attractor's force is reversed.</p>
   <p>The controlled attractor has an additional feature: particles within a small range are &quot;reflected&quot;. This means that the particle's velocity is reflected against its relative direction from the attractor whether it is moving toward or away from the attractor. Therefore, particles which manage to come close may float nearby while others will be reflected away.</p>
   <p>For a cool efffect, hold the attractor over the emitter until the system stabilizes. Then shake it loose.</p>
+  <p><a href="index3.html">Next.</a></p>
 </div>
 
 <script id=fs_phong type=x-shader/x-fragment>
